@@ -1,3 +1,5 @@
+ - Fix serialization in CParticleSystemSceneNode (found by B@z)
+
  - Prevent crash in BillboardTextSceneNode when a custom font is used. Found and fixed by Nalin (bugtracker id: 3020487)
 
  - Fix problem in animation system that currentFrame got messed up after long pauses (especially when not starting at frame 0).
